manifests/sample-app/kepler/networkpolicy.yaml
# This allows connection between  central opentelemetry collector running in -n otelcol
# and application pods
# This is not necessary when running otel-collector as a sidecar
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-otel-collector
  namespace: kepler
spec:
  podSelector: 
    matchLabels:
      app.kubernetes.io/name: kepler-exporter
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: otelcol
      podSelector:
        matchLabels:
          otel: collect
